# ukees_sre_test

./: .gitignore  Readme.md
bash/: Readme.md  scan_hosts.sh
docker/: Dockerfile  Readme.md  hello.c  hello.py
python/https_server/: Readme.md  pyproject.toml
python/https_server/src/: cli.py
python/on_bucket_create/: Readme.md  main.py
terraform/: .terraform.lock.hcl  Readme.md  main.tf  outputs.tf  variables.tf
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
