[tool.poetry]
name = "https-server"
version = "0.1.0"
description = "HTTPS server test"
authors = ["Hennadii Stas"]
packages = [
    { include = "src", from="." },
    { include = "src/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
flask = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.10"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
https-server = "src.cli:main"
